--- a/OpenSOC-DataServices/pom.xml
+++ b/OpenSOC-DataServices/pom.xml
@@ -395,7 +395,7 @@
 		<!-- Kafka -->
 		<dependency>
 			<groupId>org.apache.kafka</groupId>
-			<artifactId>kafka_2.9.2</artifactId>
+			<artifactId>kafka_${global_kafka_scala_version}</artifactId>
 			<version>0.8.1.1</version>
 			<exclusions>
 				<exclusion>
