--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="UTF-8"?><!-- Licensed to the Apache Software 
-	Foundation (ASF) under one or more contributor license agreements. See the 
-	NOTICE file distributed with this work for additional information regarding 
-	copyright ownership. The ASF licenses this file to You under the Apache License, 
-	Version 2.0 (the "License"); you may not use this file except in compliance 
-	with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
-	Unless required by applicable law or agreed to in writing, software distributed 
-	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
-	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+<?xml version="1.0" encoding="UTF-8"?><!-- Licensed to the Apache Software
+	Foundation (ASF) under one or more contributor license agreements. See the
+	NOTICE file distributed with this work for additional information regarding
+	copyright ownership. The ASF licenses this file to You under the Apache License,
+	Version 2.0 (the "License"); you may not use this file except in compliance
+	with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
+	Unless required by applicable law or agreed to in writing, software distributed
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for
 	the specific language governing permissions and limitations under the License. -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
@@ -21,10 +21,11 @@
 	<url>www.getopensoc.com</url>
 	<properties>
 		<twitter>@ProjectOpenSOC</twitter>
-		<global_storm_version>0.9.2-incubating</global_storm_version>
-		<global_kafka_version>0.8.0</global_kafka_version>
-		<global_hadoop_version>2.2.0</global_hadoop_version>
-		<global_hbase_version>0.98.0-hadoop2</global_hbase_version>
+		<global_storm_version>0.9.3</global_storm_version>
+		<global_kafka_scala_version>2.9.2</global_kafka_scala_version>
+		<global_kafka_version>0.8.1</global_kafka_version>
+		<global_hadoop_version>2.6.0</global_hadoop_version>
+		<global_hbase_version>0.98.4-hadoop2</global_hbase_version>
 		<global_json_simple_version>1.1.1</global_json_simple_version>
 		<global_metrics_version>3.0.2</global_metrics_version>
 		<global_junit_version>4.4</global_junit_version>
